# game-template

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.c
include/: game_lib.h  game_scene.h  scene.h  scene_stack.h  start_scene.h
src/: CMakeLists.txt  game_scene.c  scene_stack.c  start_scene.c
